# tek-steamclient

./: .gitignore  BUILD.md  README.md  meson.build  meson.options
include/: meson.build
include/tek-steamclient/: am.h  base.h  cm.h  content.h  error.h  os.h  s3c.h  sp.h
pkgfiles/: README.md  tek-steamclient.ebuild
pkgfiles/gentoo/: tek-steamclient.ebuild
pkgfiles/msys2/: PKGBUILD
po/: POTFILES  README.md  meson.build  ru.po  tek-steamclient.pot
protos/: meson.build
protos/tek/steamclient/cm/: emsg.proto  meson.build  message_header.proto
protos/tek/steamclient/cm/msg_payloads/: auth_common.proto  begin_auth_session_via_credentials.proto  begin_auth_session_via_qr.proto  generate_access_token_for_app.proto  get_cdn_auth_token.proto  get_depot_decryption_key.proto  get_depot_patch_info.proto  get_details.proto  get_manifest_request_code.proto  get_password_rsa_public_key.proto  get_servers_for_steampipe.proto  heartbeat.proto  hello.proto  license_list.proto  logoff.proto  logon.proto  multi.proto  os_type.proto  pics_access_token.proto  pics_changes_since.proto  pics_product_info.proto  poll_auth_session_status.proto  published_file_details.proto  query_files.proto  request_encrypted_app_ticket.proto  update_auth_session_with_steam_guard_code.proto
protos/tek/steamclient/content/: manifest_metadata.proto  manifest_payload.proto  meson.build  patch_payload.proto
res/: tek-sc-cli.manifest.in  tek-sc-cli.rc.in  tek-steamclient.rc.in
src/cli/: args.c  cmd_parser.c  cmd_runner.c  common.h  dump.c  dump.h  main.c  meson.build  os.h  os_linux.c  os_macos.c  os_windows.c  print_err.c
src/common/: am.h  error.h  ulock.h
src/lib/: am_cm.c  am_core.c  am_job.c  am_job_delete.c  am_job_download.c  am_job_install.c  am_job_patch.c  am_job_verify.c  am_vdf.cpp  cm.hpp  cm_auth.cpp  cm_core.cpp  cm_pics.cpp  cm_sign_in.cpp  cm_steampipe.cpp  cm_workshop.cpp  content_ops.hpp  delta_chunks.h  depot_delta.c  depot_delta_compute.cpp  depot_manifest.c  depot_parse.cpp  depot_patch.c  error_msgs.c  lib_ctx.cpp  lib_ctx.hpp  meson.build  os.h  os_linux.c  os_macos.c  os_windows.c  s3c.cpp  s3c.hpp  sp.c  sp.h  sp_common.c  sp_decode.c  sp_multi.c  sp_simple.c  utils.c  (+9 more)
subprojects/: ValveFileVDF.wrap
subprojects/packagefiles/ValveFileVDF/: meson.build
tek-sc-data/: state.sqlite3
