option('zlib_ng', description: 'Use zlib-ng instead of zlib', type: 'feature')
option('gettext', description: 'Build localization files and libintl support (requires gettext utilities)', type: 'boolean', value: true)
option('s3_client', description: 'Build tek-s3 client side API declared in s3c.h', type: 'boolean', value: true)
option('content', description: 'Build content API declared in content.h', type: 'boolean', value: true)
option('minizip_ng', description: 'Use minizip-ng instead of minizip', type: 'feature')
option('steampipe', description: 'Build SteamPipe downloader API declared in sp.h. Will pull in content.h header for tek_sc_dm_chunk definition', type: 'boolean', value: true)
option('chunks_per_srv', description: 'The number of simultaneous chunk downloads per server in SteamPipe Multi downloader', type : 'integer', min : 1, value : 4)
option('app_manager', description: 'Build application manager API declared in am.h. Requires "content" and "steampipe". If "cli" is also specified, build its application manager module', type: 'boolean', value: true)
option('io_uring', description: 'Use io_uring (liburing) for improved application manager job I/O performance on Linux', type: 'feature')
option('cli', description: 'Build tek-sc-cli (command-line interface app)', type: 'boolean', value: true)
option('cli_dump', description: 'Build dump module of tek-sc-cli (support for dumping tek-steamclient content files in human-readable text format). Requires "app_manager"', type: 'boolean', value: true)
