proto_src += files(
  'emsg.proto',
  'message_header.proto',
  'msg_payloads/auth_common.proto',
  'msg_payloads/begin_auth_session_via_credentials.proto',
  'msg_payloads/begin_auth_session_via_qr.proto',
  'msg_payloads/generate_access_token_for_app.proto',
  'msg_payloads/get_cdn_auth_token.proto',
  'msg_payloads/get_depot_decryption_key.proto',
  'msg_payloads/get_depot_patch_info.proto',
  'msg_payloads/get_details.proto',
  'msg_payloads/get_manifest_request_code.proto',
  'msg_payloads/get_password_rsa_public_key.proto',
  'msg_payloads/get_servers_for_steampipe.proto',
  'msg_payloads/heartbeat.proto',
  'msg_payloads/hello.proto',
  'msg_payloads/license_list.proto',
  'msg_payloads/logoff.proto',
  'msg_payloads/logon.proto',
  'msg_payloads/multi.proto',
  'msg_payloads/os_type.proto',
  'msg_payloads/pics_access_token.proto',
  'msg_payloads/pics_changes_since.proto',
  'msg_payloads/pics_product_info.proto',
  'msg_payloads/poll_auth_session_status.proto',
  'msg_payloads/published_file_details.proto',
  'msg_payloads/query_files.proto',
  'msg_payloads/request_encrypted_app_ticket.proto',
  'msg_payloads/update_auth_session_with_steam_guard_code.proto'
)
